--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="assets/css/index.css" />
     <link rel="stylesheet" href="assets/css/header.css" />
     <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/footer.css" />
     <title>Devsla</title>
   </head>
   <body>
@@ -46,6 +47,14 @@
         <h2>Order Online for<a href="#">Touchless Delivery</a></h2>
       </div>
     </main>
-    <footer></footer>
+    <footer>
+      <div class="buttons--area">
+        <a href="#" class="btn--dark">Custom Order</a>
+        <a href="#" class="btn--light">Existing Inventory</a>
+      </div>
+      <div class="arrow--area">
+        <img class="arrow" src="assets/images/down.png" alt="Seta para baixo" />
+      </div>
+    </footer>
   </body>
 </html>
